<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"

    tools:context=".Viewer">


    <TextView
        android:id="@+id/tv_input"
        android:layout_width="fill_parent"
        android:layout_height="110dp"

        android:ellipsize="end"
        android:lineSpacingExtra="48sp"
        android:rotationX="0"
        android:singleLine="true"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        android:textSize="45sp" />

    <TextView
        android:layout_width="fill_parent"

        android:layout_height="120dp"
        android:textColor="@color/teal_200"
        android:textSize="40sp"
        android:ellipsize="end"
        android:layout_gravity="end"
        android:id="@+id/tv_result"
        android:textAlignment="textEnd"
        android:singleLine="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/clear_btn"
                style = "@style/ActionButton"
                android:text = "@string/c"/>
            <TextView
                android:id="@+id/openBracket_btn"
                style = "@style/ActionButton"
                android:text = "@string/openB"/>
            <TextView
                android:id="@+id/closeBracket_btn"
                style = "@style/ActionButton"
                android:text = "@string/closeB"/>
            <TextView
                android:id="@+id/divide_btn"
                style = "@style/ActionButton"
                android:text = "@string/divide"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/one_btn"
                style = "@style/NumberButton"
                android:text = "@string/_1"/>
            <TextView
                android:id="@+id/two_btn"
                style = "@style/NumberButton"
                android:text = "@string/_2"/>
            <TextView
                android:id="@+id/three_btn"
                style = "@style/NumberButton"
                android:text = "@string/_3"/>
            <TextView
                android:id="@+id/multiply_btn"
                style = "@style/ActionButton"
                android:text = "@string/multiply"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/four_btn"
                style = "@style/NumberButton"
                android:text = "@string/_4"/>
            <TextView
                android:id="@+id/five_btn"
                style = "@style/NumberButton"
                android:text = "@string/_5"/>
            <TextView
                android:id="@+id/six_btn"
                style = "@style/NumberButton"
                android:text = "@string/_6"/>
            <TextView
                android:id="@+id/minus_btn"
                style = "@style/ActionButton"
                android:text = "@string/minus"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/seven_btn"
                style = "@style/NumberButton"
                android:text = "@string/_7"/>
            <TextView
                android:id="@+id/eight_btn"
                style = "@style/NumberButton"
                android:text = "@string/_8"/>
            <TextView
                android:id="@+id/nine_btn"
                style = "@style/NumberButton"
                android:text = "@string/_9"/>
            <TextView
                android:id="@+id/plus_btn"
                style = "@style/ActionButton"
                android:text = "@string/plus"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/dot_btn"
                style = "@style/NumberButton"
                android:text = "@string/dot"/>
            <TextView
                android:id="@+id/zero_btn"
                style = "@style/NumberButton"
                android:text = "@string/_0"/>
            <ImageView
                android:id="@+id/back_Button"
                style = "@style/ActionButton"
                android:src="@drawable/ic_action_back"
                android:scaleType="center">

            </ImageView>

            <TextView
                android:id="@+id/equal_btn"
                style = "@style/ActionButton"
                android:text = "@string/equal"/>

        </LinearLayout>










    </LinearLayout>






</LinearLayout>